Fixed sidebar icons and menu tab content alignment

--- a/_css/main.css
+++ b/_css/main.css
@@ -715,12 +715,21 @@ a.thumbnail{
 	padding-right: 20px; 
 	padding-bottom: 20px;
 }
-
+.tab-content .row{
+	margin-right: 20px;
+	margin-left: 20px;
+}
+#home .row{
+	margin-right: 0px;
+	margin-left: 0px;
+}
 .sidebar .media-carousel .left{
+	margin-left: 20px;
 	padding-top: 50px;
 
 }
 .sidebar .media-carousel .right{
+	margin-right: 20px;
 	padding-top: 50px;
 
 }
@@ -767,6 +776,7 @@ nav.row{
 	border:0px;
 }
 .slider-block{
+	margin-right: 10px;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
@@ -812,4 +822,8 @@ a.carousel-control {
 	
 	padding-left: 20px;
 	
+}
+
+.slide3 a.right{
+	margin-right: 40px;
 }
